Name:                hweblib
Version:             0.7.0
Synopsis:            Haskell Web Library
Description:
  The library includes attoparsec based incremental parsers for
  rfc7230 (http) and rfc3986 (uri), rfc2045-46 (mime). The package
  name will subject to change due to broad range of rfc coverage.

Homepage:            http://github.com/aycanirican/hweblib
License:             BSD3
License-file:        LICENSE
Author:              Aycan iRiCAN <iricanaycan@gmail.com>, Utku Demir <utdemir@gmail.com>
Maintainer:          iricanaycan@gmail.com
Category:            Web
Build-type:          Simple
Cabal-version:       >= 1.10
Tested-With:         GHC == 8.6.3
                   , GHC == 8.4.4 
                   , GHC == 8.2.2
Extra-Source-Files:  README.md tests/mime-wiki.txt tests/benchmark-results.txt

Library
  hs-source-dirs:    src
  Default-language:  Haskell2010
  ghc-options:       -Wall -fwarn-tabs -funbox-strict-fields
                     -fno-warn-unused-do-bind
  -- Modules exported by the library.
  Exposed-modules: Network.Types
                 , Network.Http 
                 , Network.Parser.RfcCommon
                 , Network.Parser.Rfc2045
                 , Network.Parser.Rfc2046
                 , Network.Parser.Rfc2183
                 , Network.Parser.Rfc2234
                 , Network.Parser.Rfc2388
                 , Network.Parser.Rfc2822
                 , Network.Parser.Rfc4647
                 , Network.Parser.Rfc5234
                 , Network.Parser.Rfc3986
                 , Network.Parser.Rfc5322
                 , Network.Parser.Rfc5646
                 , Network.Parser.Rfc7230
                 , Network.Parser.Rfc7231
                 , Network.Parser.Rfc7232
                 , Network.Parser.Rfc7233
                 , Network.Parser.Rfc7234
                 , Network.Parser.Mime
                 , Network.Parser.Utils

  -- Packages needed in order to build this package.
  Build-depends: base >= 4 && < 5
               , containers
               , bytestring
               , mtl 
               , transformers
               , text
               , attoparsec
               , scientific
               , time

test-suite doctest
  type:              exitcode-stdio-1.0
  main-is:           doctests.hs
  hs-source-dirs:    tests
  build-depends:     base, doctest, Glob
  default-language:  Haskell2010
  ghc-options:       -w -threaded -rtsopts -with-rtsopts=-N
  x-doctest-options: --fast
                             
Test-suite hunit
  Type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  Main-is:           hunit.hs
  Default-language:  Haskell2010
  ghc-options:       -w -threaded -rtsopts -with-rtsopts=-N

  Other-modules: Test.Parser.Rfc3986
               , Test.Parser.Rfc2045
               , Test.Parser.Rfc2822
               , Test.Parser.Rfc7230
               , Test.Parser.Parser
               , Network.Types
               , Network.Http 
               , Network.Parser.RfcCommon
               , Network.Parser.Rfc2234
               , Network.Parser.Rfc2822
               , Network.Parser.Rfc2045
               , Network.Parser.Rfc2046
               , Network.Parser.Rfc3986
               , Network.Parser.Mime

  Build-depends: base >= 4 && < 5
               , containers
               , bytestring
               , mtl
               , transformers
               , attoparsec
               , scientific
               , HUnit
               , time
               , text

benchmark common-parses
  Type:             exitcode-stdio-1.0
  hs-source-dirs:   benchmarks
  Main-is:          common-parses.hs
  hs-source-dirs:   benchmarks
  Default-language: Haskell2010
  ghc-options:      -w -O2 -threaded -fdicts-cheap -funbox-strict-fields

  Build-depends:
    base >= 4 && < 5
    , containers
    , bytestring
    , mtl
    , transformers
    , attoparsec
    , criterion
    , HUnit

source-repository head
  type:     git
  location: git://github.com/aycanirican/hweblib.git
