Name:                hweblib-test
Version:             0.1
Synopsis:            Haskell Web Library Tests
Homepage:            http://github.com/aycanirican/hweblib
License:             BSD3
License-file:        ../LICENSE
Author:              Aycan iRiCAN
Maintainer:          aycan.irican@core.gen.tr
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.6

Executable hweblib-test
  hs-source-dirs: ./ ../
  main-is: TestSuite.hs
  -- Modules exported by the library.
  -- Exposed-modules:
  
  -- Packages needed in order to build this package.
  Build-depends:
    base >= 4 && < 5
    , containers
    , bytestring
    , monads-fd
    , transformers
    , attoparsec
    , criterion
    , HUnit

  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  
